# relay

./: .gitignore  .mcp.json  .relay-role  CLAUDE.md  Cargo.toml  README.md  install.ps1  install.sh  relay.config.yaml  uninstall.ps1  uninstall.sh
.claude/: settings.json
.claude/skills/relay-init/: SKILL.md
.claude/skills/relay-plan/: SKILL.md
.github/workflows/: pr-check.yml  release.yml
docs/: mcp-codex.md  mcp-copilot.md  mcp-opencode.md  mcp-pi.md
src/: config.rs  context.rs  main.rs  runner.rs  session.rs  setup.rs  updater.rs  watcher.rs
src/adapters/: base.rs  codex.rs  copilot.rs  mod.rs  opencode.rs  pi.rs
src/mcp/: cli.rs  daemon.rs  db.rs  installer.rs  jobs.rs  mod.rs  server.rs  spawn.rs  status.rs  tools.rs
