[package]
name = "relay"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"

# MCP server
rmcp = { version = "1.7.0", features = ["server", "transport-streamable-http-server", "macros"] }
axum = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
sysinfo = "0.30"
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }
tokio-util = "0.7"
